# ai-edge-voice-pipeline-pi5

./: .gitignore  1.docx  README.md  pyproject.toml
benchmarks/: asr_quant_report.json
benchmarks/local_x64/: pi5_kpi_report.json  pi5_kpi_runs.csv
benchmarks/proxy_x64_1thread/: pi5_kpi_report.json  pi5_kpi_runs.csv
docs/: DESIGN.md
scripts/: __init__.py  asr_quant_report.py  make_sample.py  pi5_kpi.py  prepare_models.py
tests/: test_app.py  test_asr_quant_report.py  test_kpi.py  test_make_sample.py  test_prepare_models.py  test_stdio.py  test_wav_io.py
voice_edge/: __init__.py  app.py
